--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
     implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation 'androidx.compose.ui:ui-tooling:1.0.0'
+
 
     //Telecharger image
     implementation"io.coil-kt:coil-compose:2.2.2"
